--- a/.github/workflows/integration-misc-1-cron.yaml
+++ b/.github/workflows/integration-misc-1-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2024-11-08T11:46:41Z by kres 1fc767a.
+# Generated on 2024-11-28T13:53:18Z by kres 232fe63.
 
 name: integration-misc-1-cron
 concurrency:
@@ -80,6 +80,7 @@ jobs:
           make talosctl-cni-bundle
       - name: e2e-no-cluster-discovery
         env:
+          GITHUB_STEP_NAME: ${{ github.job}}-e2e-no-cluster-discovery
           IMAGE_REGISTRY: registry.dev.siderolabs.io
           SHORT_INTEGRATION_TEST: "yes"
           WITH_CLUSTER_DISCOVERY: "false"
@@ -87,6 +88,7 @@ jobs:
           sudo -E make e2e-qemu
       - name: e2e-kubespan
         env:
+          GITHUB_STEP_NAME: ${{ github.job}}-e2e-kubespan
           IMAGE_REGISTRY: registry.dev.siderolabs.io\
           SHORT_INTEGRATION_TEST: "yes"
           WITH_CLUSTER_DISCOVERY: "true"
@@ -96,6 +98,7 @@ jobs:
       - name: e2e-default-hostname
         env:
           DISABLE_DHCP_HOSTNAME: "true"
+          GITHUB_STEP_NAME: ${{ github.job}}-e2e-default-hostname
           IMAGE_REGISTRY: registry.dev.siderolabs.io
           SHORT_INTEGRATION_TEST: "yes"
           VIA_MAINTENANCE_MODE: "true"
@@ -107,8 +110,6 @@ jobs:
         with:
           name: talos-logs-integration-misc-1
           path: |-
-            ~/.talos/clusters/**/*.log
-            ~/.talos/clusters/**/support.zip
+            /tmp/logs-*.tar.gz
             /tmp/support-*.zip
-            !~/.talos/clusters/**/swtpm.log
           retention-days: "5"
