--- a/.github/workflows/integration-misc-2-cron.yaml
+++ b/.github/workflows/integration-misc-2-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2024-11-08T11:46:41Z by kres 1fc767a.
+# Generated on 2024-11-28T13:53:18Z by kres 232fe63.
 
 name: integration-misc-2-cron
 concurrency:
@@ -93,6 +93,7 @@ jobs:
           make images-essential
       - name: e2e-bios-cgroupsv1
         env:
+          GITHUB_STEP_NAME: ${{ github.job}}-e2e-bios-cgroupsv1
           IMAGE_REGISTRY: registry.dev.siderolabs.io
           SHORT_INTEGRATION_TEST: "yes"
           WITH_CONFIG_PATCH: '@hack/test/patches/cgroupsv1.yaml'
@@ -101,6 +102,7 @@ jobs:
           sudo -E make e2e-qemu
       - name: e2e-disk-image
         env:
+          GITHUB_STEP_NAME: ${{ github.job}}-e2e-disk-image
           IMAGE_REGISTRY: registry.dev.siderolabs.io
           SHORT_INTEGRATION_TEST: "yes"
           USE_DISK_IMAGE: "true"
@@ -114,8 +116,6 @@ jobs:
         with:
           name: talos-logs-integration-misc-2
           path: |-
-            ~/.talos/clusters/**/*.log
-            ~/.talos/clusters/**/support.zip
+            /tmp/logs-*.tar.gz
             /tmp/support-*.zip
-            !~/.talos/clusters/**/swtpm.log
           retention-days: "5"
