--- a/.github/workflows/integration-misc-3-cron.yaml
+++ b/.github/workflows/integration-misc-3-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2024-11-08T11:46:41Z by kres 1fc767a.
+# Generated on 2024-11-28T13:53:18Z by kres 232fe63.
 
 name: integration-misc-3-cron
 concurrency:
@@ -80,6 +80,7 @@ jobs:
           make talosctl-cni-bundle
       - name: e2e-network-chaos
         env:
+          GITHUB_STEP_NAME: ${{ github.job}}-e2e-network-chaos
           IMAGE_REGISTRY: registry.dev.siderolabs.io
           SHORT_INTEGRATION_TEST: "yes"
           WITH_NETWORK_CHAOS: "yes"
@@ -87,6 +88,7 @@ jobs:
           sudo -E make e2e-qemu
       - name: e2e-metal-iso
         env:
+          GITHUB_STEP_NAME: ${{ github.job}}-e2e-metal-iso
           IMAGE_REGISTRY: registry.dev.siderolabs.io
           SHORT_INTEGRATION_TEST: "yes"
           WITH_CONFIG_INJECTION_METHOD: metal-iso
@@ -98,8 +100,6 @@ jobs:
         with:
           name: talos-logs-integration-misc-3
           path: |-
-            ~/.talos/clusters/**/*.log
-            ~/.talos/clusters/**/support.zip
+            /tmp/logs-*.tar.gz
             /tmp/support-*.zip
-            !~/.talos/clusters/**/swtpm.log
           retention-days: "5"
