--- a/.github/workflows/integration-qemu-csi-longhorn-cron.yaml
+++ b/.github/workflows/integration-qemu-csi-longhorn-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2024-11-08T11:46:41Z by kres 1fc767a.
+# Generated on 2024-11-28T13:53:18Z by kres 232fe63.
 
 name: integration-qemu-csi-longhorn-cron
 concurrency:
@@ -107,6 +107,7 @@ jobs:
       - name: e2e-qemu-csi-longhorn
         env:
           EXTRA_TEST_ARGS: -talos.csi=longhorn
+          GITHUB_STEP_NAME: ${{ github.job}}-e2e-qemu-csi-longhorn
           IMAGE_REGISTRY: registry.dev.siderolabs.io
           QEMU_WORKERS: "3"
           SHORT_INTEGRATION_TEST: "yes"
@@ -119,8 +120,6 @@ jobs:
         with:
           name: talos-logs-integration-qemu-csi-longhorn
           path: |-
-            ~/.talos/clusters/**/*.log
-            ~/.talos/clusters/**/support.zip
+            /tmp/logs-*.tar.gz
             /tmp/support-*.zip
-            !~/.talos/clusters/**/swtpm.log
           retention-days: "5"
