--- a/.github/workflows/integration-qemu-csi-rook-ceph-cron.yaml
+++ b/.github/workflows/integration-qemu-csi-rook-ceph-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2024-11-08T11:46:41Z by kres 1fc767a.
+# Generated on 2024-11-28T13:53:18Z by kres 232fe63.
 
 name: integration-qemu-csi-rook-ceph-cron
 concurrency:
@@ -81,6 +81,7 @@ jobs:
       - name: e2e-qemu-csi-rook-ceph
         env:
           EXTRA_TEST_ARGS: -talos.csi=rook-ceph
+          GITHUB_STEP_NAME: ${{ github.job}}-e2e-qemu-csi-rook-ceph
           IMAGE_REGISTRY: registry.dev.siderolabs.io
           QEMU_CPUS_WORKERS: "6"
           QEMU_EXTRA_DISKS: "1"
@@ -97,8 +98,6 @@ jobs:
         with:
           name: talos-logs-integration-qemu-csi-rook-ceph
           path: |-
-            ~/.talos/clusters/**/*.log
-            ~/.talos/clusters/**/support.zip
+            /tmp/logs-*.tar.gz
             /tmp/support-*.zip
-            !~/.talos/clusters/**/swtpm.log
           retention-days: "5"
