feat: support image cache copying
Fixes #9615

The are no integration tests, this is to be addressed later.
I did manual tests so far.

Also includes first draft of the documentation.

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -155,7 +155,12 @@ search default.svc.cluster.local svc.cluster.local cluster.local my-custom-searc
 nameserver 10.96.0.10
 options ndots:5
 ```
+"""
 
+    [notes.image-cache]
+        title = "Image Cache"
+        description = """\
+Talos now supports providing a local [Image Cache](https://www.talos.dev/v1.9/talos-guides/configuration/image-cache/) for container images.
 """
 
 [make_deps]
