--- a/.github/workflows/integration-misc-3-cron.yaml
+++ b/.github/workflows/integration-misc-3-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2024-11-28T13:53:18Z by kres 232fe63.
+# Generated on 2024-12-10T11:14:00Z by kres 8183c20.
 
 name: integration-misc-3-cron
 concurrency:
@@ -92,6 +92,14 @@ jobs:
           IMAGE_REGISTRY: registry.dev.siderolabs.io
           SHORT_INTEGRATION_TEST: "yes"
           WITH_CONFIG_INJECTION_METHOD: metal-iso
+        run: |
+          sudo -E make e2e-qemu
+      - name: e2e-iommu-pcidriverrebind
+        env:
+          GITHUB_STEP_NAME: ${{ github.job}}-e2e-iommu-pcidriverrebind
+          IMAGE_REGISTRY: registry.dev.siderolabs.io
+          SHORT_INTEGRATION_TEST: "yes"
+          WITH_IOMMU: "yes"
         run: |
           sudo -E make e2e-qemu
       - name: save artifacts
