--- a/.kres.yaml
+++ b/.kres.yaml
@@ -898,6 +898,14 @@ spec:
             SHORT_INTEGRATION_TEST: yes
             WITH_CONFIG_INJECTION_METHOD: "metal-iso"
             IMAGE_REGISTRY: registry.dev.siderolabs.io
+        - name: e2e-iommu-pcidriverrebind
+          command: e2e-qemu
+          withSudo: true
+          environment:
+            GITHUB_STEP_NAME: ${{ github.job}}-e2e-iommu-pcidriverrebind
+            SHORT_INTEGRATION_TEST: yes
+            WITH_IOMMU: yes
+            IMAGE_REGISTRY: registry.dev.siderolabs.io
         - name: save-talos-logs
           conditions:
             - always
